--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,12 @@
     "react-hook-form": "^6.12.2",
     "react-player": "^2.7.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "socket.io-client": "^3.0.4",
     "styled-components": "^5.2.1",
     "sweetalert": "^2.1.2",
     "web-vitals": "^0.2.4",
-    "yup": "^0.32.5"
+    "yup": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
